Entidades + Rota + Apache Commons

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-logging.level.org.apache.camel=TRACE
+logging.level.org.apache.camel=INFO
+
+fila.processamento.unidade.sessao=seda:aguardandoProcessamento
