--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<camel.version>2.15.4</camel.version>
+		<apache.commons.version>3.3.2</apache.commons.version>
 	</properties>
 
 	<dependencies>
@@ -46,7 +47,12 @@
 			<artifactId>camel-spring-boot</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
-										
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons.version}</version>
+        </dependency>										
 	</dependencies>
 	
 	<dependencyManagement>
