Versao 1 Grafico Sessao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 logging.level.org.apache.camel=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.*=DEBUG
 
+
+# Fila em memoria. Evoluir para Rabbit
 fila.processamento.unidade.sessao=seda:aguardandoProcessamento
+
+# Mongo sem autenticacao. Evoluir para Autenticar
+spring.data.mongodb.uri=mongodb://localhost/graphGenerator
+#mongo.mensageiro.usuario=nsmensageiro
+#mongo.mensageiro.host=127.0.0.1
+#mongo.mensageiro.porta=27017
+#mongo.mensageiro.nome=graphGenerator
+#mongo.connection.uri=mongodb://${mongo.mensageiro.usuario}:${mongo.mensageiro.senha}@${mongo.mensageiro.host}:${mongo.mensageiro.porta}/${mongo.mensageiro.nome}
