--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,29 @@
 			<artifactId>camel-spring-boot</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.camel</groupId>
+		    <artifactId>camel-mongodb</artifactId>
+		    <version>${camel.version}</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${apache.commons.version}</version>
-        </dependency>										
+        </dependency>
+        
+        <dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>									
 	</dependencies>
 	
 	<dependencyManagement>
